Started working on histogram.

--- a/Rtutorial.bib
+++ b/Rtutorial.bib
@@ -194,3 +194,11 @@
 	year = {2015},
 	file = {Data Tidying · Data Science with R:C\:\\Users\\megha\\Zotero\\storage\\UC4U9WA3\\tidying.html:text/html}
 }
+
+
+@misc{traffic,
+	title = {Average {Daily} {Traffic} {Counts} {\textbar} {City} of {Chicago} {\textbar} {Data} {Portal}},
+	url = {https://data.cityofchicago.org/Transportation/Average-Daily-Traffic-Counts/pfsx-4n4m},
+	urldate = {2018-09-26},
+	file = {Average Daily Traffic Counts | City of Chicago | Data Portal:C\:\\Users\\Myriam\\Zotero\\storage\\8FETRERP\\pfsx-4n4m.html:text/html}
+}
