More stuff on scatter plot

--- a/Rtutorial.bib
+++ b/Rtutorial.bib
@@ -202,3 +202,57 @@
 	urldate = {2018-09-26},
 	file = {Average Daily Traffic Counts | City of Chicago | Data Portal:C\:\\Users\\Myriam\\Zotero\\storage\\8FETRERP\\pfsx-4n4m.html:text/html}
 }
+
+
+@misc{calendar,
+	title = {Calendar date},
+	copyright = {Creative Commons Attribution-ShareAlike License},
+	url = {https://en.wikipedia.org/w/index.php?title=Calendar_date&oldid=856764544},
+	abstract = {A calendar date is a reference to a particular day represented within a calendar system. The calendar date allows the specific day to be identified. The number of days between two dates may be calculated. For example, "24 September 2018" is ten days after "14 September 2018" in the Gregorian calendar. The date of a particular event depends on the observed time zone. For example, the air attack on Pearl Harbor that began at 7:48 a.m. Hawaiian time on December 7, 1941, took place at 3:18 a.m. December 8 in Japan (Japan Standard Time). 
+	A particular day may be represented by a different date in another calendar as in the Gregorian calendar and the Julian calendar, which have been used simultaneously in different places. In most calendar systems, the date consists of three parts: the day of month, month, and the year. There may also be additional parts, such as the day of week. Years are usually counted from a particular starting point, usually called the epoch, with era referring to the particular period of time (Note the different use of the terms in geology).
+	The most widely used epoch is a conventional birthdate of Jesus (which was established by Dionysius Exiguus in the sixth century). A date without the year part may also be referred to as a date or calendar date (such as "27 September" rather than "27 September 2018"). As such, it defines the day of an annual event, such as a birthday or Christmas on 24/25 December.
+	Many computer systems internally store points in time in Unix time format or some other system time format.
+	The date (Unix) command—internally using the C date and time functions—can be used to convert that internal representation of a point in time
+	to most of the date representations shown here.
+	The current date in the Gregorian calendar is 27 September 2018.  If this is not really the current date, then  to update it.},
+	language = {en},
+	urldate = {2018-09-27},
+	journal = {Wikipedia},
+	month = aug,
+	year = {2018},
+	note = {Page Version ID: 856764544},
+	file = {Snapshot:C\:\\Users\\megha\\Zotero\\storage\\MHZB7QH2\\index.html:text/html}
+}
+
+
+@misc{hist,
+	title = {Histogram},
+	copyright = {Creative Commons Attribution-ShareAlike License},
+	url = {https://en.wikipedia.org/w/index.php?title=Histogram&oldid=858967679},
+	abstract = {A histogram is an accurate representation of the distribution of numerical data. It is an estimate of the probability distribution of a continuous variable (quantitative variable) and was first introduced by Karl Pearson. It differs from a bar graph, in the sense that a bar graph relates two variables, but a histogram relates only one. To construct a histogram, the first step is to "bin" (or "bucket") the range of values—that is, divide the entire range of values into a series of intervals—and then count how many values fall into each interval.  The bins are usually specified as consecutive, non-overlapping intervals of a variable. The bins (intervals) must be adjacent, and are often (but are not required to be) of equal size.If the bins are of equal size, a rectangle is erected over the bin with height proportional to the frequency—the number of cases in each bin. A histogram may also be normalized to display "relative" frequencies. It then shows the proportion of cases that fall into each of several categories, with the sum of the heights equaling 1.
+	However, bins need not be of equal width; in that case, the erected rectangle is defined to have its area proportional to the frequency of cases in the bin. The vertical axis is then not the frequency but frequency density—the number of cases per unit of the variable on the horizontal axis. Examples of variable bin width are displayed on Census bureau data below.
+	As the adjacent bins leave no gaps, the rectangles of a histogram touch each other to indicate that the original variable is continuous.Histograms give a rough sense of the density of the underlying distribution of the data, and often for density estimation: estimating the probability density function of the underlying variable. The total area of a histogram used for probability density is always normalized to 1. If the length of the intervals on the x-axis are all 1, then a histogram is identical to a relative frequency plot.
+	A histogram can be thought of as a simplistic kernel density estimation, which uses a kernel to smooth frequencies over the bins. This yields a smoother probability density function, which will in general more accurately reflect distribution of the underlying variable. The density estimate could be plotted as an alternative to the histogram, and is usually drawn as a curve rather than a set of boxes. Histograms are nevertheless preferred in applications, when their statistical properties need to be modeled. The correlated variation of a kernel density estimate is very difficult to describe mathematically, while it is simple for a histogram where each bin varies independently.
+	An alternative to kernel density estimation is the average shifted histogram,
+	which is fast to compute and gives a smooth curve estimate of the density without using kernels.
+	The histogram is one of the seven basic tools of quality control.Histograms are sometimes confused with bar charts. A histogram is used for continuous data, where the bins represent ranges of data, while a bar chart is a plot of categorical variables. Some authors recommend that bar charts have gaps between the rectangles to clarify the distinction.},
+	language = {en},
+	urldate = {2018-09-26},
+	journal = {Wikipedia},
+	month = sep,
+	year = {2018},
+	note = {Page Version ID: 858967679},
+	file = {Snapshot:C\:\\Users\\megha\\Zotero\\storage\\VZ8PNZPD\\index.html:text/html}
+}
+
+
+@misc{nhis,
+	title = {{NHIS} - 2017 {Data} {Release}},
+	url = {https://www.cdc.gov/nchs/nhis/nhis_2017_data_release.htm},
+	abstract = {Homepage of the National Center for Health Statistics},
+	language = {en-us},
+	urldate = {2018-09-27},
+	month = aug,
+	year = {2018},
+	file = {Snapshot:C\:\\Users\\megha\\Zotero\\storage\\BAIKL4RJ\\nhis_2017_data_release.html:text/html}
+}
